syntax = "proto3";

package api.facilities;

option go_package = "api/internal/proto/facilities;facilitiesservice";

message Facility {
  int64 id = 1;
  string name = 2;
  string building = 3;
  string address = 4;
  optional string image_path = 5;
  optional int64 capacity = 6;
  string created_at = 7;  // RFC3339 string
  string updated_at = 8;  // RFC3339 string
  string google_calendar_id = 9;
}

message Category {
  int64 id = 1;
  string name = 2;
  string description = 3;
  double price = 4;
  int64 facility_id = 5;
}
